# CRM_V-D

./: .gitignore  migrate_excel.js  next.config.ts  package-lock.json  package.json  run_app.sh  update.json
.github/workflows/: release.yml
public/: RESRV.xlsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/connection/: page.tsx
src/app/feedback/: page.tsx
src/app/guests/: page.tsx
src/app/pos/: page.tsx
src/app/pos/mobile/: page.tsx
src/app/reservations/: page.tsx
src/app/rooms/: page.tsx
src/components/: ClientLayout.tsx  Skeleton.tsx  Toast.tsx
src/components/dashboard/: CheckoutModal.tsx  GuestRegistrationModal.tsx  LockScreen.tsx  NotificationsPanel.tsx  RoomDetailPanel.tsx  SettingsModal.tsx  StayReportModal.tsx
src/lib/: api.ts
